@@ -67,11 +67,11 @@ public class ReverseComparatorTest extends AbstractComparatorTest<Integer> {
     @Override
     public List<Integer> getComparableObjectsOrdered() {
         final List<Integer> list = new LinkedList<Integer>();
-        list.add(new Integer(1));
-        list.add(new Integer(2));
-        list.add(new Integer(3));
-        list.add(new Integer(4));
-        list.add(new Integer(5));
+        list.add(Integer.valueOf(1));
+        list.add(Integer.valueOf(2));
+        list.add(Integer.valueOf(3));
+        list.add(Integer.valueOf(4));
+        list.add(Integer.valueOf(5));
         return list;
     }
 
