@@ -57,7 +57,7 @@ public class TreeListTest<E> extends AbstractListTest<E> {
     public static void benchmark(final List<? super Integer> l) {
         long start = System.currentTimeMillis();
         for (int i = 0; i < 100000; i++) {
-            l.add(new Integer(i));
+            l.add(Integer.valueOf(i));
         }
         System.out.print(System.currentTimeMillis() - start + ";");
 
@@ -79,7 +79,7 @@ public class TreeListTest<E> extends AbstractListTest<E> {
         start = System.currentTimeMillis();
         for (int i = 0; i < 10000; i++) {
             final int j = (int) (Math.random() * 100000);
-            l.add(j, new Integer(-j));
+            l.add(j, Integer.valueOf(-j));
         }
         System.out.print(System.currentTimeMillis() - start + ";");
 
@@ -93,7 +93,7 @@ public class TreeListTest<E> extends AbstractListTest<E> {
         start = System.currentTimeMillis();
         for (int i = 0; i < 200; i++) {
             final int j = (int) (Math.random() * 100000);
-            l.indexOf(new Integer(j));
+            l.indexOf(Integer.valueOf(j));
         }
         System.out.print(System.currentTimeMillis() - start + ";");
 
@@ -219,32 +219,32 @@ public class TreeListTest<E> extends AbstractListTest<E> {
 //    }
 
     public void testBug35258() {
-        final Object objectToRemove = new Integer(3);
+        final Object objectToRemove = Integer.valueOf(3);
 
         final List<Integer> treelist = new TreeList<Integer>();
-        treelist.add(new Integer(0));
-        treelist.add(new Integer(1));
-        treelist.add(new Integer(2));
-        treelist.add(new Integer(3));
-        treelist.add(new Integer(4));
+        treelist.add(Integer.valueOf(0));
+        treelist.add(Integer.valueOf(1));
+        treelist.add(Integer.valueOf(2));
+        treelist.add(Integer.valueOf(3));
+        treelist.add(Integer.valueOf(4));
 
         // this cause inconsistence of ListIterator()
         treelist.remove(objectToRemove);
 
         final ListIterator<Integer> li = treelist.listIterator();
-        assertEquals(new Integer(0), li.next());
-        assertEquals(new Integer(0), li.previous());
-        assertEquals(new Integer(0), li.next());
-        assertEquals(new Integer(1), li.next());
+        assertEquals(Integer.valueOf(0), li.next());
+        assertEquals(Integer.valueOf(0), li.previous());
+        assertEquals(Integer.valueOf(0), li.next());
+        assertEquals(Integer.valueOf(1), li.next());
         // this caused error in bug 35258
-        assertEquals(new Integer(1), li.previous());
-        assertEquals(new Integer(1), li.next());
-        assertEquals(new Integer(2), li.next());
-        assertEquals(new Integer(2), li.previous());
-        assertEquals(new Integer(2), li.next());
-        assertEquals(new Integer(4), li.next());
-        assertEquals(new Integer(4), li.previous());
-        assertEquals(new Integer(4), li.next());
+        assertEquals(Integer.valueOf(1), li.previous());
+        assertEquals(Integer.valueOf(1), li.next());
+        assertEquals(Integer.valueOf(2), li.next());
+        assertEquals(Integer.valueOf(2), li.previous());
+        assertEquals(Integer.valueOf(2), li.next());
+        assertEquals(Integer.valueOf(4), li.next());
+        assertEquals(Integer.valueOf(4), li.previous());
+        assertEquals(Integer.valueOf(4), li.next());
         assertEquals(false, li.hasNext());
     }
     
