@@ -73,12 +73,12 @@ public class TransformedSetTest<E> extends AbstractSetTest<E> {
         for (int i = 0; i < els.length; i++) {
             set.add(els[i]);
             assertEquals(i + 1, set.size());
-            assertEquals(true, set.contains(new Integer((String) els[i])));
+            assertEquals(true, set.contains(Integer.valueOf((String) els[i])));
             assertEquals(false, set.contains(els[i]));
         }
 
         assertEquals(false, set.remove(els[0]));
-        assertEquals(true, set.remove(new Integer((String) els[0])));
+        assertEquals(true, set.remove(Integer.valueOf((String) els[0])));
 
     }
 
@@ -91,12 +91,12 @@ public class TransformedSetTest<E> extends AbstractSetTest<E> {
         final Set<?> set = TransformedSet.transformedSet(originalSet, TransformedCollectionTest.STRING_TO_INTEGER_TRANSFORMER);
         assertEquals(els.length, set.size());
         for (final Object el : els) {
-            assertEquals(true, set.contains(new Integer((String) el)));
+            assertEquals(true, set.contains(Integer.valueOf((String) el)));
             assertEquals(false, set.contains(el));
         }
         
         assertEquals(false, set.remove(els[0]));
-        assertEquals(true, set.remove(new Integer((String) els[0])));
+        assertEquals(true, set.remove(Integer.valueOf((String) els[0])));
     }
 
     @Override
