@@ -69,10 +69,10 @@ public class TransformedSortedSetTest<E> extends AbstractSortedSetTest<E> {
         for (int i = 0; i < els.length; i++) {
             set.add(els[i]);
             assertEquals(i + 1, set.size());
-            assertEquals(true, set.contains(new Integer((String) els[i])));
+            assertEquals(true, set.contains(Integer.valueOf((String) els[i])));
         }
 
-        assertEquals(true, set.remove(new Integer((String) els[0])));
+        assertEquals(true, set.remove(Integer.valueOf((String) els[0])));
     }
 
     public void testTransformedSet_decorateTransform() {
@@ -84,10 +84,10 @@ public class TransformedSortedSetTest<E> extends AbstractSortedSetTest<E> {
         final Set<?> set = TransformedSortedSet.transformedSet(originalSet, TransformedCollectionTest.STRING_TO_INTEGER_TRANSFORMER);
         assertEquals(els.length, set.size());
         for (final Object el : els) {
-            assertEquals(true, set.contains(new Integer((String) el)));
+            assertEquals(true, set.contains(Integer.valueOf((String) el)));
         }
         
-        assertEquals(true, set.remove(new Integer((String) els[0])));
+        assertEquals(true, set.remove(Integer.valueOf((String) els[0])));
     }
 
     @Override
